--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "elm": "^0.19.0-no-deps",
     "elm-hot": "^1.1.0",
     "node-elm-compiler": "^5.0.3",
-    "parcel-bundler": "^1.12.3"
+    "parcel-bundler": "^1.12.3",
+    "sass": "^1.21.0"
   }
 }
